syntax = "proto3";

package api.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

message ExerciseSet {
  Exercise exercise = 1 [(buf.validate.field).required = true];
  Set set = 2 [(buf.validate.field).required = true];
}

message ExerciseSets {
  Exercise exercise = 1 [(buf.validate.field).required = true];
  repeated Set sets = 2 [(buf.validate.field).repeated.min_items = 1];
}

message Exercise {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string user_id = 2;
  string name = 3;
  string label = 4;
}

message Set {
  string id = 1;
  double weight = 2; // The weight can be less than zero.
  int32 reps = 3 [(buf.validate.field).int32 = { gte: 1 }];
  MetadataSet metadata = 4;
}

message MetadataSet {
  string workout_id = 1 [(buf.validate.field).string.uuid = true];
  google.protobuf.Timestamp created_at = 2;
  bool personal_best = 3;
}

message User {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string first_name = 2 [(buf.validate.field).string.min_len = 1];
  string last_name = 3 [(buf.validate.field).string.min_len = 1];
  string email = 4;
  bool followed = 5;
}

message PaginationRequest {
  int32 page_limit = 1 [(buf.validate.field).int32 = { gte: 1, lte: 100 }];
  bytes page_token = 2;
}

message PaginationResponse {
  bytes next_page_token = 1;
}
